deploy/kubernetes/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locg-service
  namespace: locg-game-stg
spec:
  type: NodePort
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: locg-service
  ports:
    - name: ws-locg
      targetPort: 8080
      port: 8080
